Cycles render crash Blender in some scene in versions >= f00f959 #38216

Closed
opened 2014-01-14 18:47:21 +01:00 by Andrey M · 12 comments

System Information
Linux mint 16 x64, 8GB
Blender Version
Broken: (2.69.7 f00f959 and more new)
Worked: (f86fbc4)

when push Animation render button in scene (http://www.pasteall.org/blend/26264) it close lender; if Blender was started from terminal it contain a message about Segmentation fault; Type of Cycles render CPU/GPU has no mean..

Exact steps for others to reproduce the error
Open .blend file http://www.pasteall.org/blend/26264. press "Animation" button as for sequence render. :(

**System Information** Linux mint 16 x64, 8GB **Blender Version** Broken: (2.69.7 f00f959 and more new) Worked: (f86fbc4) when push Animation render button in scene (http://www.pasteall.org/blend/26264) it close lender; if Blender was started from terminal it contain a message about Segmentation fault; Type of Cycles render CPU/GPU has no mean.. **Exact steps for others to reproduce the error** Open .blend file http://www.pasteall.org/blend/26264. press "Animation" button as for sequence render. :(
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dron09

Added subscriber: @dron09

#38215 was marked as duplicate of this issue

#38215 was marked as duplicate of this issue

Added subscribers: @Sergey, @ThomasDinges

Added subscribers: @Sergey, @ThomasDinges

Could be similar to #38215

Could be similar to #38215
Author

Yes. last versions very unstable in rendering , but it has random crashes earlier f00f959 and stable after it for me so was thinked this has some different problems. sorry for bad English

Yes. last versions very unstable in rendering , but it has random crashes earlier f00f959 and stable after it for me so was thinked this has some different problems. sorry for bad English
Sergey Sharybin self-assigned this 2014-01-14 19:27:11 +01:00

Added subscribers: @brecht, @Lockal, @mont29

Added subscribers: @brecht, @Lockal, @mont29

◀ Merged tasks: #38215.

◀ Merged tasks: #38215.

This issue was referenced by blender/blender-addons-contrib@2678b12a36

This issue was referenced by blender/blender-addons-contrib@2678b12a368dee19c01b42a41e15980002f01d18

This issue was referenced by 2678b12a36

This issue was referenced by 2678b12a368dee19c01b42a41e15980002f01d18

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2678b12a36.

Closed by commit 2678b12a36.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38216
No description provided.